# Geo_Vertical

./: .gitignore  CHANGELOG.md  CLAUDE.md  DO_TSS.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  README.md  install.sh  install_windows.bat  install_windows.ps1  install_windows_simple.bat  main.py  push_to_github.ps1  push_to_github_simple.ps1  pyproject.toml  requirements-full.txt  requirements-minimal.txt  requirements.txt  run.bat  run.sh  uninstall_windows.bat  ДО ТСС.docx
.claude/: settings.local.json
core/: __init__.py  batch_processor.py  belt_completion.py  belt_operations.py  calculation_thread.py  calculations.py  data_loader.py  data_loader_async.py  exceptions.py  face_track_completion.py  fieldgenius_loader.py  full_report_models.py  import_grouping.py  import_models.py  interactive_import.py  lattice_generator.py  multi_station_import.py  normatives.py  planar_orientation.py  point_filter.py  point_mapping.py  point_utils.py  report_schema.py  schema_exporter.py  second_station_matching.py  section_operations.py  section_state.py  sorting_pipeline.py  straightness_calculations.py  survey_registration.py  tower_generator.py  trimble_loader.py  undo_manager.py
docs/: DO_TSS_2.md  FULL_REPORT_MIGRATION.md  HOW_TO_CREATE_REPORT.md  POINT_FILTERING_GUIDE.md  REPORT_FORMAT.md  TRIMBLE_SUPPORT.md  USER_GUIDE.md  second_station_import_audit_report.md  section_points_audit_2026-03-28.md  section_points_audit_report.md  verticality_straightness_audit_report.md  verticality_straightness_formula_matrix.md  verticality_straightness_reference_scenarios.md  ГОСТ_Р_71949-2025.txt
examples/: PRS-6.jxl  Priv-PRS_Razvilnoe-1.job  Priv-PRS_Razvilnoe-2.job  Priv-URS_Privoln-1.job  Priv-URS_Privoln-1.jxl  ostrogozsk_prs15.jxl  test_tower_data.csv  test_tower_perfect.csv
gui/: __init__.py  batch_dialog.py  belt_completion_dialog.py  calculation_tab.py  calculation_table_widget.py  data_import_wizard.py  data_table.py  editor_3d.py  editor_components.py  enhanced_tower_preview.py  equipment_editor.py  excel_export_dialog.py  full_report_tab.py  full_report_template_editor.py  help_dialog.py  index_manager.py  interactive_import_wizard.py  lattice_editor.py  main_window.py  plots_widget.py  point_editor_3d.py  point_selector_3d.py  profile_editor_widget.py  report_dialog.py  report_preview_dialog.py  report_widget.py  rich_tooltip.py  second_station_import_wizard.py  settings_dialog.py  straightness_widget.py  tower_3d_renderer.py  tower_builder_master.py  tower_builder_panel.py  tower_builder_wizard.py  tower_preview_widget.py  tower_properties_panel.py  tower_structure_tree.py  ui_helpers.py  unified_tower_builder_panel.py  verticality_widget.py
tests/: __init__.py  test_angular_verticality_payload.py  test_audit_phase2_regressions.py  test_basic_functionality.py  test_belt_operations.py  test_calculations.py  test_exceptions.py  test_face_track_completion.py  test_full_report_pipeline.py  test_import_regressions.py  test_interactive_import.py  test_legacy_report_generator.py  test_method2_logic.py  test_normatives.py  test_planar_orientation.py  test_plot_audit_regressions.py  test_point_editor_3d.py  test_point_utils.py  test_report_generator_enhanced.py  test_report_template_verticality_traceability.py  test_report_widget_preview.py  test_section_audit_regressions.py  test_section_operations.py  test_sorting_pipeline.py  test_straightness_calculations.py  test_tower_generator.py  test_transform_utils.py  test_undo_manager.py
tmp_legacy_report_check/: legacy.docx  legacy.xlsx
user_data/: full_report.docx
utils/: __init__.py  coordinate_systems.py  error_handler.py  full_report_builder.py  logging_config.py  report_generator.py  settings_manager.py  (+1 more)
(+126 files in other folders)
