[project]
name = "geo-vertical"
version = "2.0.0"
description = "GeoVertical Analyzer — программа для анализа вертикальности башенных конструкций"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.7.0",
    "PyQt6-WebEngine>=6.7.0",
    "pyqtgraph>=0.13.0",
    "PyOpenGL>=3.1.5",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "reportlab>=3.6.0",
    "ezdxf>=0.17.0",
    "Pillow>=9.0.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "python-docx>=0.8.11",
    "dbfread>=2.0.7",
    "pyproj",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "ruff>=0.9",
    "mypy>=1.14",
    "pandas-stubs",
]

# ──────────────────────── pytest ────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ──────────────────────── coverage ──────────────────────
[tool.coverage.run]
source = ["core", "utils"]
omit = [
    "*/tests/*",
    "gui/*",
]

[tool.coverage.report]
fail_under = 30
show_missing = true
skip_empty = true

# ──────────────────────── ruff ──────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # строки длиннее line-length (много существующего кода)
    "E701",    # множественные инструкции на одной строке (существующий код)
    "E702",    # множественные инструкции через ;
    "E402",    # импорт не в начале файла (условные импорты)
    "E741",    # неоднозначные имена переменных (l, O, I)
    "F401",    # неиспользуемые импорты (публичный API в __init__.py)
    "F841",    # неиспользуемые переменные (существующий код, TODO: очистить)
    "N802",    # имена функций не в snake_case (Qt слоты)
    "N803",    # имена аргументов не в snake_case (Qt API)
    "N806",    # переменные не в snake_case (Qt виджеты)
    "N815",    # mixedCase в классах (Qt свойства)
    "N816",    # mixedCase в глобальных переменных
    "B007",    # неиспользуемые переменные цикла
    "B904",    # raise ... from err в except
    "B905",    # zip() без strict=
    "SIM102",  # collapsible if (существующий код)
    "SIM108",  # тернарные операторы вместо if-else
    "SIM118",  # in dict.keys() -> in dict
    "SIM401",  # if-else вместо dict.get
    "RUF001",  # кириллица в строках (штатное поведение)
    "RUF002",  # кириллица в docstrings
    "RUF003",  # кириллица в комментариях
    "RUF005",  # collection-literal-concatenation
    "RUF012",  # mutable-class-default
    "RUF013",  # implicit-optional
    "RUF059",  # unused-unpacked-variable
    "UP007",   # Optional -> X | None (совместимость с 3.9)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM", "N"]
"gui/*" = ["N", "B"]

[tool.ruff.lint.isort]
known-first-party = ["core", "gui", "utils"]

# ──────────────────────── mypy ──────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gui.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
